# CheatsheetBuilder

./: .gitignore  Cargo.toml
cheatsheet_builder/: Cargo.toml
cheatsheet_builder/src/: main.rs
presentation/: Cargo.toml
presentation/src/: lib.rs
presentation/src/gui/tauri-gui/: .gitignore  package.json  tsconfig.json  vite.config.ts
presentation/src/gui/tauri-gui-solid/: index.html  package.json
presentation/src/gui/tauri-gui-solid/src/: App.tsx  index.tsx  shoelace.d.ts  types.ts
presentation/src/gui/tauri-gui-solid/src-tauri/: Cargo.toml  tauri.conf.json
presentation/src/gui/tauri-gui-solid/src-tauri/src/: lib.rs  main.rs
presentation/src/gui/tauri-gui-solid/src/components/: Categories.tsx  SnippetList.tsx
presentation/src/gui/tauri-gui/frontends/lit-sl/: index.html  package.json  styles.css
presentation/src/gui/tauri-gui/frontends/lit-sl/src/: main.ts  types.ts
presentation/src/gui/tauri-gui/frontends/lit-sl/src/components/: categories.ts  comp-default.ts  confirm-dialog.ts  drawer.ts  header-comp.ts  menu-dialog.ts  menu.ts  search-order-button.ts  settings-logger.ts  snippet-editor.ts  snippet-list.ts  snippet-tag-list.ts  snippet.ts  tag-item.ts  tag-search-bar.ts  tree-item.ts  tree-view.ts  tree.ts
presentation/src/gui/tauri-gui/frontends/lit-sl/src/controllers/: main-controller.ts  snippet-controller.ts  tag-list-controller.ts
presentation/src/gui/tauri-gui/frontends/lit-sl/src/invokers/: categories-invoker.ts  main-invoker.ts  snippet-invoker.ts  tag-list-invoker.ts  test-task-invoker.ts
presentation/src/gui/tauri-gui/frontends/lit-sl/src/styles/: light.css  mainStyle.ts  (+5 more)
presentation/src/gui/tauri-gui/frontends/lit-solo/: index.html  package.json
presentation/src/gui/tauri-gui/frontends/lit-solo/src/: main.ts  types.ts
presentation/src/gui/tauri-gui/src-tauri/: Cargo.toml  tauri.conf.json
presentation/src/gui/tauri-gui/src-tauri/src/: app_config.rs  commands.rs  lib.rs  main.rs  menu.rs
presentation/src/gui/xilem/: xilem.rs
presentation/src/tui/ratatui/: ratatui.rs
repository/: Cargo.toml
repository/src/: errors.rs  lib.rs  types.rs
repository/src/db/sqlite/: rusqlite.rs  rusqlite_db.rs
repository/src/db/sqlite/sql/: create_db.sql  insert_test_data.sql
repository/src/memory/: hashmap_store.rs
repository/src/ports/: ports.rs  services.rs  stores.rs
repository/src/tools/: parse_joplin.rs
repository/tests/: rusqilte_test.rs
(+44 files in other folders)
