[workspace]
resolver = "2"

members = [
     "cheatsheet_builder", "domain", "repository", "presentation"
]

# default-members = ["presentation/src/gui/tauri-gui/src-tauri"]

# members = [
#     "domain", "repository", "presentation/src/gui/tauri-gui/src-tauri"
# ]

# members = [
#     "domain", "repository", "presentation/src/gui/tauri-gui/src-tauri"
# ]
