[package]
name = "repository"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled", "backup"] }
walkdir = "2.5.0"
serde = { version = "1.0.215", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
